- fixed quest menu icons: icon = 2 for available quests, else icon = 4!